--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="one">#6649D7</color>
+    <color name="two">#EC9A9A</color>
+    <color name="three">#FFFFFFFF</color>
+
+
 </resources>
