--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,14 @@
         android:layout_width="301dp"
         android:layout_height="50dp"
         android:layout_marginBottom="99dp"
-        android:fontFamily="@font/Asap_fonts"
+        android:fontFamily="@font/asap_font"
         android:text="¡Registrate!"
         android:textAllCaps="false"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
