--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,14 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="DuplicateIds" />
 
-
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:text="@string/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="680dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
