RegistroPag2 y presentacion de perfil

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -65,8 +66,7 @@
         android:layout_marginBottom="189dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/aleo_regular"
-        android:text=" Creamos conexiones que nos llevan a disfrutar los momentos y la vida.
-!Únete a esta comunidad, disfruta con nosotros!"
+        android:text="@string/textoinicial"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,12 +76,17 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="140dp"
-        android:layout_height="35dp"
+        android:layout_width="301dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="99dp"
+        android:fontFamily="@font/"
         android:text="@string/button3"
+        android:textAllCaps="false"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="680dp" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
