--- a/app/src/main/res/layout/activity_registro_pag2.xml
+++ b/app/src/main/res/layout/activity_registro_pag2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,61 +9,72 @@
 
     <TextView
         android:id="@+id/tituloRegistroPag2"
-        android:layout_width="240dp"
-        android:layout_height="26dp"
-        android:text="textoPresentacion"
+        android:layout_width="333dp"
+        android:layout_height="47dp"
+        android:gravity="center"
+        android:fontFamily="@font/asap_fonts"
+        android:text="Creemos tu perfil"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.075"
-        tools:ignore="TextSizeCheck" />
+        app:layout_constraintVertical_bias="0.048"
+        tools:ignore="HardcodedText"/>
 
     <TextView
         android:id="@+id/invitacionaFotos"
-        android:layout_width="127dp"
-        android:layout_height="44dp"
-        android:text="Texto de invitación"
+        android:layout_width="338dp"
+        android:layout_height="69dp"
+        android:text="Sabemos que esto es un poco tedioso, pero es necesario para todos. ¡Completa tu perfil para tener más visibilidad y encontrar esa persona perfecta para ti! "
         tools:ignore="MissingConstraints,TextSizeCheck"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="104dp" />
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="91dp" />
+
+    <TextView
+        android:id="@+id/invitacionaFotos2"
+        android:layout_width="338dp"
+        android:layout_height="69dp"
+        android:text="Carga tus momentos en el orden que quieras, así todos sabremos qué te gusta hacer. (Debes cargar mínimo 1 foto) "
+        tools:ignore="MissingConstraints,TextSizeCheck"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="183dp" />
 
     <ImageView
         android:id="@+id/foto1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="81dp"
+        android:layout_height="82dp"
         tools:ignore="MissingConstraints,ImageContrastCheck"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="169dp"
+        tools:layout_editor_absoluteX="65dp"
+        tools:layout_editor_absoluteY="276dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/foto2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="82dp"
+        android:layout_height="84dp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="314dp"
-        tools:srcCompat="@tools:sample/avatars"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="358dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/foto3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="87dp"
+        android:layout_height="81dp"
         tools:ignore="MissingConstraints,ImageContrastCheck"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="314dp"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="361dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/foto4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="169dp"
-        tools:srcCompat="@tools:sample/avatars"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="81dp"
+        android:layout_height="80dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="276dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/Carrera"
@@ -113,5 +125,19 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="593dp" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteX="87dp"
+        tools:layout_editor_absoluteY="148dp" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="174dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
